syntax = "proto3";

package choreography;

option go_package = "github.com/delimitrou/DeathStarBench/tree/master/hotelReservation/services/frontend";

service Choreography {
  rpc BookTravel(BookTravelRequest) returns (BookTravelResult);
  rpc Search(SearchRequest) returns (SearchResult);
}

message BookTravelRequest {
  Coordinate from = 1;
  Coordinate to = 2;
  string start_date = 3;
  string end_date = 4;
}

message BookTravelResult {
  Flight out_flight = 1;
  Flight home_flight = 2;
  string hotel_id = 3;
}

message Coordinate {
  double latitude = 1;
  double longitude = 2;
}

message Flight {
  string id = 1;
  string from_airport = 2;
  string to_airport = 3;
  string departure_time = 4;
  string arrival_time = 5;
}

message SearchRequest {
  string inDate = 1;
  string outDate = 2;
  double lat = 3;
  double lon = 4;
}

message SearchResult {
  repeated Hotel hotels = 1;
}

message Hotel {
  string id = 1;
  string name = 2;
  string phoneNumber = 3;
  string description = 4;
  Address address = 5;
  repeated Image images = 6;
}

message Address {
  string streetNumber = 1;
  string streetName = 2;
  string city = 3;
  string country = 4;
  string postalCode = 5;
  double lat = 6;
  double lon = 7;
}

message Image {
  string url = 1;
  bool isDefault = 2;
}